chore: adds initial code

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 # Test binary, built with `go test -c`
 *.test
 
+# Test questions
+questions.json
+
 # Code coverage profiles and other test artifacts
 *.out
 coverage.*
