--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,7 +31,6 @@ jobs:
 
       - name: Gofmt check
         run: |
-          cd quiz-cli
           fmt_out=$(gofmt -l .)
           if [ -n "$fmt_out" ]; then
             echo "Files need gofmt:"
@@ -40,11 +39,7 @@ jobs:
           fi
 
       - name: Vet
-        run: |
-          cd quiz-cli
-          go vet ./...
+        run: go vet ./...
 
       - name: Test
-        run: |
-          cd quiz-cli
-          go test ./...
+        run: go test ./...
